# astra-scate

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  documentation_update.yml  nightly.yml  release.yml  report_coverage.yml  run_unit_tests.yml  update_docs.yml
configs/: ipo_memory_training.yaml
docs/: CLEANUP_SUMMARY.md  contributing.md  getting_started.md  index.md  training_scripts_guide.md
docs/api/: index.md
docs/api/algorithms/: dpo.md  ppo.md
docs/api/core/: algorithm.md  common.md  environment.md  moderator.md  problem.md
docs/api/methods/: ast_problem.md
docs/api/moderators/: detoxify.md
docs/api/training/: harness.md  trainer.md
docs/stylesheets/: extra.css
docs/tutorials/: index.md  running_an_evaluation.md  training_an_evaluator.md
examples/: README.md  ast.py  ast_basic.py  ast_gpt2.py  ast_hf.py  ast_llama.py  ast_ppo.py  extended_mdp_demo.py  memory_reward_demo.py  mypy.ini
examples/demos/: evaluator_demo.py  ipo_memory_integration_demo.py  memory_attack_training_demo.py  memory_demo.py  monitoring_evaluation_demo.py  training_script_demo.py
examples/output/: demo_evaluation_report.json  demo_training_report.json
examples/output/demo_dashboard/: demo_run_summary_report.json
examples/output/demo_metrics/: demo_run_episodes.json  demo_run_metrics.json  demo_run_performance.json
examples/output/demo_results/: demo_run_episodes.json  demo_run_evaluation.json  demo_run_performance.json  demo_run_training.json
examples/output/integration_metrics/: integration_demo_episodes.json  integration_demo_metrics.json  integration_demo_performance.json
scripts/: cleanup_demo_outputs.sh  run_all_tests.sh  test_training_scripts.py
src/astra/cli/: evaluate.py  main.py  train.py
src/astra_rl/: __init__.py  logging.py
src/astra_rl/algorithms/: __init__.py  dpo.py  ppo.py
src/astra_rl/cli/: evaluate.py  main.py  train.py
src/astra_rl/core/: __init__.py  algorithm.py  common.py  environment.py  extended_mdp.py  memory_reward.py  model.py  moderator.py  problem.py  rewards.py  rollout.py  state.py
src/astra_rl/ext/transformers/: __init__.py  hf_ast_problem.py
src/astra_rl/memory/: __init__.py  evaluator.py  manager.py
src/astra_rl/methods/: __init__.py  ast.py  ast_problem.py
src/astra_rl/moderators/: __init__.py  detoxify.py
src/astra_rl/problems/: ast.py
src/astra_rl/training/: __init__.py  evaluate_trained_model.py  evaluation_dashboard.py  harness.py  ipo_memory_trainer.py  metrics_tracker.py  monitor_training.py  simple_evaluation_dashboard.py  train_ipo_memory.py  train_memory_attack.py  trainer.py
src/astral/cli/: evaluate.py  main.py  train.py
tests/: conftest.py  test_astprompter_integration.py  test_basic_memory.py  test_extended_mdp.py  test_general.py  test_integration.py  test_integration_device_consistency.py  test_ipo_memory_trainer.py  test_memory_evaluator.py  test_memory_manager.py  test_memory_reward.py  test_problem_device_consistency.py  test_train_memory_attack.py  test_training.py  test_with_models.py  utils.py
tests/cli/: test_evaluate.py  test_train.py
