[project]
name = "astra-rl"
version = "0.0.1"
description = "Tools for training, evaluating, and improving language models."
license-files = ["LICENSE"]
authors = [
    { name = "Duncan Eddy", email = "deddy@stanford.edu" },
    { name = "Max Lamparth", email = "lamparth@stanford.edu" },
    { name = "Kiana Jafari", email = "kjafari@stanford.edu" },
    { name = "Houjun Liu", email = "houjun@stanford.edu" },
    { name = "Allie Griffith", email = "allie11@stanford.edu" },
    { name = "Marc Schlichting", email = "mschl@stanford.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.16.0",
]

[project.scripts]
astral = "astra_rl.cli.main:main"

[tool.setuptools]
py-modules = ['astra_rl']

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.cibuildwheel]
before-all = "uname -a"
build-frontend = "build[uv]"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "coverage>=7.9.1",
    "coveralls>=4.0.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-material>=9.6.15",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings-python>=1.16.12",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
