[project]
name = "astra-rl"
version = "0.0.1"
description = "Tools for training, evaluating, and improving language models."
license-files = ["LICENSE"]
authors = [
    { name = "Duncan Eddy", email = "deddy@stanford.edu" },
    { name = "Max Lamparth", email = "lamparth@stanford.edu" },
    { name = "Kiana Jafari", email = "kjafari@stanford.edu" },
    { name = "Houjun Liu", email = "houjun@stanford.edu" },
    { name = "Allie Griffith", email = "allie11@stanford.edu" },
    { name = "Marc Schlichting", email = "mschl@stanford.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "detoxify>=0.5.2",
    "pydantic>=2.11.7",
    "tokenizers>=0.21.2",
    "torch>=2.7.1",
    "transformers>=4.53.1",
    "typer>=0.16.0",
    "wandb>=0.21.0",
]

[project.optional-dependencies]
wandb = ["wandb>=0.12.0"]

[project.scripts]
astral = "astra_rl.cli.main:main"

[tool.setuptools]
py-modules = ['astra_rl']

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.cibuildwheel]
before-all = "uname -a"
build-frontend = "build[uv]"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "coverage>=7.9.1",
    "coveralls>=4.0.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-material>=9.6.15",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings-python>=1.16.12",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.1",
    "pre-commit>=4.2.0",
    "mypy>=1.16.1",
    "types-torch>=0.1.1",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 20

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests", "examples", "src/astra_rl/ext"]

# Coverage configuration
[tool.coverage.run]
source = ["src/astra_rl"]
omit = [
    "tests/*",
    "*/conftest.py",
]

[tool.pytest.ini_options]
markers = [
    "slow: Mark a test as slow.",
]